--- a/mcmod-auto-upload/eel/index.html
+++ b/mcmod-auto-upload/eel/index.html
@@ -45,7 +45,7 @@
         <input type="text" id="opt1" value=0>
         <br><br>
         <input type="checkbox" id="opt2" checked>
-        <label>自动遍历到底</label>
+        <label>自动遍历</label>
       </div>
     </div>
   </body>
